# kitsune-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: python-package.yml
kitsune/: __init__.py  __main__.py  anomaly_score.py  data.py  engine.py  models.py  scalers.py  train.py
poetry/: pyproject.toml
tests/: mirai100.csv  mirai100.parquet  test_kitsune.py
