[project]
name = "kitsune"
version = "0.1.0"
description = "Kitsune anomaly detection model implemented in PyTorch."
authors = [
    "Guillem Orellana Trullols <guillem.orellana@gmail.com>"
]
license = "GPLv3"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/Guillem96/kitsune-pytorch"
repository = "https://github.com/Guillem96/kitsune-pytorch"

keywords = ["deep-learning", "pytorch", "anomaly", "detection", "unsupervised", "torch"]

[dependencies]
typer = "^0.3.2"
torch = "^1.11.0"
torchdata = "^0.3.0"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
scipy = "^1.6.3"

[dev-dependencies]
yapf = "*"
mypy = "*"

[tool.yapf]
based_on_style = "google"